WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172018
event.clientX/clientY should be in layout viewport coordinates
https://bugs.webkit.org/show_bug.cgi?id=172018
Summary
event.clientX/clientY should be in layout viewport coordinates
Simon Fraser (smfr)
Reported
2017-05-11 22:13:51 PDT
Fix MouseRelatedEvent to consider client coordinates to be in the layout viewport coordinate system, similar to getBoundingClientRect.
Attachments
Patch
(7.57 KB, patch)
2017-05-12 17:50 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(14.72 KB, patch)
2017-05-12 22:27 PDT
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-05-12 17:50:10 PDT
Created
attachment 309981
[details]
Patch
Build Bot
Comment 2
2017-05-12 17:51:16 PDT
Attachment 309981
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Radar WebKit Bug Importer
Comment 3
2017-05-12 17:54:00 PDT
<
rdar://problem/32169518
>
Simon Fraser (smfr)
Comment 4
2017-05-12 22:27:41 PDT
Created
attachment 310012
[details]
Patch
alan baradlay
Comment 5
2017-05-13 11:13:17 PDT
Comment on
attachment 310012
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=310012&action=review
> Source/WebCore/dom/MouseRelatedEvent.cpp:91 > + Frame* frame = view() ? view()->frame() : nullptr;
auto*
> Source/WebCore/dom/MouseRelatedEvent.cpp:93 > + if (FrameView* frameView = frame->view())
auto*
Simon Fraser (smfr)
Comment 6
2017-05-13 11:27:03 PDT
https://trac.webkit.org/changeset/216824/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug